error.log

> cushion@1.0.0 prod /Users/avsar/Documents/LaunchSchool/Capstone/cushion
> webpack --mode production

Hash: 820a8ee6ea438f0071db
Version: webpack 4.36.1
Time: 2246ms
Built at: 07/19/2019 1:07:13 PM
 1 asset
Entrypoint main = main.js
[0] ./src/index.js 2.52 KiB {0} [built] [failed] [1 error]

ERROR in ./src/index.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /Users/avsar/Documents/LaunchSchool/Capstone/cushion/src/index.js: Unexpected token, expected ";" (3:7)

  1 | import Cushion from './cushion';
  2 | //
> 3 | global cushion = new Cushion({localDBName:'test',username:'foo',remoteBaseURL:'http'});
    |        ^
  4 | 
  5 | 
    at Parser.raise (/Users/avsar/Documents/LaunchSchool/Capstone/cushion/node_modules/@babel/parser/lib/index.js:6325:17)
    at Parser.unexpected (/Users/avsar/Documents/LaunchSchool/Capstone/cushion/node_modules/@babel/parser/lib/index.js:7642:16)
    at Parser.semicolon (/Users/avsar/Documents/LaunchSchool/Capstone/cushion/node_modules/@babel/parser/lib/index.js:7624:40)
    at Parser.parseExpressionStatement (/Users/avsar/Documents/LaunchSchool/Capstone/cushion/node_modules/@babel/parser/lib/index.js:10364:10)
    at Parser.parseStatementContent (/Users/avsar/Documents/LaunchSchool/Capstone/cushion/node_modules/@babel/parser/lib/index.js:9963:19)
    at Parser.parseStatement (/Users/avsar/Documents/LaunchSchool/Capstone/cushion/node_modules/@babel/parser/lib/index.js:9829:17)
    at Parser.parseBlockOrModuleBlockBody (/Users/avsar/Documents/LaunchSchool/Capstone/cushion/node_modules/@babel/parser/lib/index.js:10405:25)
    at Parser.parseBlockBody (/Users/avsar/Documents/LaunchSchool/Capstone/cushion/node_modules/@babel/parser/lib/index.js:10392:10)
    at Parser.parseTopLevel (/Users/avsar/Documents/LaunchSchool/Capstone/cushion/node_modules/@babel/parser/lib/index.js:9758:10)
    at Parser.parse (/Users/avsar/Documents/LaunchSchool/Capstone/cushion/node_modules/@babel/parser/lib/index.js:11270:17)
    at parse (/Users/avsar/Documents/LaunchSchool/Capstone/cushion/node_modules/@babel/parser/lib/index.js:11306:38)
    at parser (/Users/avsar/Documents/LaunchSchool/Capstone/cushion/node_modules/@babel/core/lib/transformation/normalize-file.js:170:34)
    at normalizeFile (/Users/avsar/Documents/LaunchSchool/Capstone/cushion/node_modules/@babel/core/lib/transformation/normalize-file.js:138:11)
    at runSync (/Users/avsar/Documents/LaunchSchool/Capstone/cushion/node_modules/@babel/core/lib/transformation/index.js:44:43)
    at runAsync (/Users/avsar/Documents/LaunchSchool/Capstone/cushion/node_modules/@babel/core/lib/transformation/index.js:35:14)
    at process.nextTick (/Users/avsar/Documents/LaunchSchool/Capstone/cushion/node_modules/@babel/core/lib/transform.js:34:34)
    at process._tickCallback (internal/process/next_tick.js:61:11)
